# jons-mcp-file-server

./: .gitignore  MIGRATION.md  README.md  pyproject.toml
src/jons_mcp_file_server/: __init__.py  factory.py  gcs.py  localhost.py  protocol.py
tests/: __init__.py  test_factory.py  test_gcs.py  test_localhost.py  test_protocol.py
